--- a/digi_ND/examples/Makefile.am
+++ b/digi_ND/examples/Makefile.am
@@ -4,15 +4,13 @@ AM_LDFLAGS = ../lib/libdigi.la $(LIBS)
 
 EXTRA_DIST = run_examples.sh 
 
-bin_PROGRAMS =  root_2_dst simple_smear smear_analysis value_chaeck
+bin_PROGRAMS =  root_2_dst simple_smear smear_analysis
 
 root_2_dst_SOURCES = root_2_dst.cpp
 
 simple_smear_SOURCES = simple_smear.cpp
 
 smear_analysis_SOURCES = smear_analysis.cpp
-
-value_chaeck_SOURCES = value_chaeck.cpp
 
 examples: $(bin_PROGRAMS)
 
@@ -21,8 +19,6 @@ dst: root_2_dst
 smear: simple_smear
 
 anal: smear_analysis
-
-vcheck: value_chaeck
 
 CLEANFILES = *~* 
 
