--- a/sciNDG4/SConstruct
+++ b/sciNDG4/SConstruct
@@ -336,7 +336,7 @@ if not env['LIBPATH']:
 
 	env.ParseConfig("xml2-config --libs")
 
-  	env.MergeFlags('-L'+USER_PATH+'/third_party/genie_source/src/scripts/build/ext/v6_412/lib')
+#  	env.MergeFlags('-L'+USER_PATH+'/third_party/genie_source/src/scripts/build/ext/v6_412/lib')
         
 
     # CRY  .................................................
