First proper momentum seed implemented for high momentum

--- a/mind_rec/base/Makefile.am
+++ b/mind_rec/base/Makefile.am
@@ -1,10 +1,10 @@
 noinst_LTLIBRARIES = libbase.la
 
-pkginclude_HEADERS = fitter.h event_classif.h shower_rec.h hit_clusterer.h plane_info.h
+pkginclude_HEADERS = fitter.h event_classif.h shower_rec.h hit_clusterer.h plane_info.h super_fit.h
 
 INCLUDES= -I. -I.. 
 
-libbase_la_SOURCES = fitter.cpp event_classif.cpp shower_rec.cpp hit_clusterer.cpp plane_info.cpp
+libbase_la_SOURCES = fitter.cpp event_classif.cpp shower_rec.cpp hit_clusterer.cpp plane_info.cpp super_fit.cpp
 
 CLEANFILES = *~* 
 
